# FociPy

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
config/: default_config.yaml
data/: README.md
docs/: CHANGELOG.md  METHODS.md  ROADMAP.md  USAGE.md
notebooks/: 01_data_exploration.ipynb  02_segmentation_comparison.ipynb  03_foci_detection_tuning.ipynb  04_validation_plots.ipynb
src/: analysis.py
src/focipy/: __init__.py  __main__.py  config.py  foci_detection.py  io_utils.py  kinetics.py  pipeline.py  preprocessing.py  quantification.py  reporting.py  segmentation.py  visualization.py
tests/: conftest.py  test_foci_detection.py  test_segmentation.py
