[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "focipy"
version = "0.1.0"
description = "Automated detection and quantification of XRCC1 foci at DNA damage sites"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "stanuch"},
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-image",
    "opencv-python",
    "matplotlib",
    "tifffile",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
notebooks = [
    "jupyter",
    "napari",
]
dl = [
    "cellpose",
]

[project.scripts]
focipy = "focipy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
